--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <header>
       <h1 id="home">Broadway Design</h1>
     <nav class="nav">
-      <a href="#home">Home</a>
-      <a href="#process">Process</a>
-      <a href="#work">Work</a>
-      <a href="#team">Team</a>
+      <a href="#home">Home</a><br/>
+      <a href="#process">Process</a><br/>
+      <a href="#work">Work</a><br/>
+      <a href="#team">Team</a><br/>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -35,7 +35,7 @@
   <p>We're hiring</p>
   <h3 id="contact">Contact</h3>
   <p>Phone:(555)-555-5555<br/>E-mail: test@example.com<br/>Twitter: @test</p>
-  <footer class="nav">
+  <footer>
     <p id="copyright">&copy;Broadway 2016</p><p><a href="#work">Work</a> <a href="#home">Home</a> <a href="#About">About</a> <a href="#work">Work</a> <a href="#team">Team</a><a href="#contact">Contact</a></p>
 </footer>
   </body>
