--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <h1 id="home">Broadway Design</h1>
-    <nav class="nav">
+    <nav>
       <a href="#home">Home</a><br/>
       <a href="#process">Process</a><br/>
       <a href="#work">Work</a><br/>
@@ -36,7 +36,7 @@
   <h3 id="contact">Contact</h3>
   <p>Phone:(555)-555-5555<br/>E-mail: test@example.com<br/>Twitter: @test</p>
   <footer>
-    <p id="copyright">&copy;Broadway 2016</p><p><a href="#work">Work</a> <a href="#home">Home</a> <a href="#About">About</a> <a href="#work">Work</a> <a href="#team">Team</a><a href="#contact">Contact</a></p>
+    <p>&copy;Broadway 2016><a href="#work">Work</a> <a href="#home">Home</a> <a href="#About">About</a> <a href="#work">Work</a> <a href="#team">Team</a><a href="#contact">Contact</a></p>
 </footer>
   </body>
 </html>
