--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <body>
     <header>
       <h1 id="home">Broadway Design</h1>
-    <nav class="button-nav">
+    <div class="nav">
       <a href="#home">Home</a><br/>
       <a href="#process">Process</a><br/>
       <a href="#work">Work</a><br/>
       <a href="#team">Team</a><br/>
       <a href="#contact">Contact</a>
-    </nav>
+    </div>
   </header>
 <div id="process">
   <h2>Our Process</h2>
@@ -36,8 +36,7 @@
   <h3 id="contact">Contact</h3>
   <p>Phone:(555)-555-5555<br/>E-mail: test@example.com<br/>Twitter: @test</p>
   <footer>
-    <p>&copy;Broadway 2016</p>
-      <p class="btn-nav"><a href="#work">Work</a> <a href="#home">Home</a> <a href="#About">About</a> <a href="#work">Work</a> <a href="#team">Team</a><a href="#contact">Contact</a></p>
+    <p>&copy;Broadway 2016</p><p class="nav"><a href="#work">Work</a> <a href="#home">Home</a> <a href="#About">About</a> <a href="#work">Work</a> <a href="#team">Team</a><a href="#contact">Contact</a></p>
 </footer>
   </body>
 </html>
