--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <h3 id="contact">Contact</h3>
   <p>Phone:(555)-555-5555<br/>E-mail: test@example.com<br/>Twitter: @test</p>
   <footer>
-    <p>&copy;Broadway 2016</p><p class="nav"><a href="#work">Work</a> <a href="#home">Home</a> <a href="#About">About</a> <a href="#work">Work</a> <a href="#team">Team</a><a href="#contact">Contact</a></p>
+    <p>&copy;Broadway 2016 <a href="#work">Work</a> <a href="#home">Home</a> <a href="#About">About</a> <a href="#work">Work</a> <a href="#team">Team</a><a href="#contact">Contact</a></p>
 </footer>
   </body>
 </html>
