--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <header>
       <h1 id="home">Broadway Design</h1>
     <div class="nav">
-      <a href="#home">Home</a><br/>
-      <a href="#process">Process</a><br/>
-      <a href="#work">Work</a><br/>
-      <a href="#team">Team</a><br/>
-      <a href="#contact">Contact</a>
+      <a class="btn" href="#home">Home</a><br/>
+      <a class="btn" href="#process">Process</a><br/>
+      <a class="btn" href="#work">Work</a><br/>
+      <a class="btn" href="#team">Team</a><br/>
+      <a class="btn" href="#contact">Contact</a>
     </div>
   </header>
 <div id="process">
@@ -36,7 +36,8 @@
   <h3 id="contact">Contact</h3>
   <p>Phone:(555)-555-5555<br/>E-mail: test@example.com<br/>Twitter: @test</p>
   <footer>
-    <p>&copy;Broadway 2016 <a href="#work">Work</a> <a href="#home">Home</a> <a href="#About">About</a> <a href="#work">Work</a> <a href="#team">Team</a><a href="#contact">Contact</a></p>
+    <p>&copy;Broadway 2016 <a class="btn" href="#work">Work</a> <a class="btn" href="#home">Home</a> <a class="btn" href="#About">About</a> <a class="btn" href="#work">Work</a>
+      <a class="btn" href="#team">Team</a> <a class="btn" href="#contact">Contact</a>
 </footer>
   </body>
 </html>
